[package]
name = "ggxrd-mod-manager"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
egui_dnd = "0.3.0"
rfd = "0.11.3"
steamlocate = { git = "https://github.com/WilliamVenner/steamlocate-rs.git", branch = "dev-v2.0" }
registry = "1.2.3"
chrono = "0.4"
rust-ini = "0.19.0"
url = "2.3.1"
sevenz-rust = "0.2.10"
open = "4.1.0"
unrar = { git = "https://github.com/muja/unrar.rs.git" }
zip-extract = "0.1.2"
self_update = { version = "0.36.0", features = ["archive-zip"] }

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
embed-resource = "1.6.3"
